add update password function
